infra/modules/vpc/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "6.10.0"
    }
  }
  backend "s3" {
  }
}

provider "aws" {
  region = var.region
}

resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = { Name = var.name }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags   = { Name = "${var.name}-igw" }
}

# Sets up a multi-AZ VPC with:
# Public subnets - can access the internet directly (via IGW).
# Private subnets -  can access the internet via NAT Gateways (not directly exposed to public).
# High availability - subnets are distributed across AZs.
# Secure routing - private instances can access the internet without being publicly exposed.
resource "aws_subnet" "public" {
  for_each = {
    for idx, az in var.availability_zones :
    az => cidrsubnet(var.vpc_cidr, 8, idx)
  }

  vpc_id                  = aws_vpc.main.id
  cidr_block              = each.value
  availability_zone       = each.key
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.name}-public-${each.key}"
    Tier = "Public"
  }
}

resource "aws_subnet" "private" {
  for_each = {
    for idx, az in var.availability_zones :
    az => cidrsubnet(var.vpc_cidr, 8, idx + 10)
  }

  vpc_id            = aws_vpc.main.id
  cidr_block        = each.value
  availability_zone = each.key

  tags = {
    Name = "${var.name}-private-${each.key}"
    Tier = "Private"
  }
}

# Routing
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = { Name = "${var.name}-public-rt" }
}

resource "aws_route_table_association" "public_assoc" {
  for_each       = aws_subnet.public
  subnet_id      = each.value.id
  route_table_id = aws_route_table.public.id
}

# NAT Gateways (per AZ)
resource "aws_eip" "nat" {
  for_each = aws_subnet.public
  domain   = "vpc"
  tags     = { Name = "nat-eip-${each.key}" }
}

resource "aws_nat_gateway" "nat" {
  for_each      = aws_subnet.public
  allocation_id = aws_eip.nat[each.key].id
  subnet_id     = each.value.id
  tags          = { Name = "nat-${each.key}" }
  depends_on    = [aws_internet_gateway.igw]
}

# Private Route Tables (per AZ)
resource "aws_route_table" "private" {
  for_each = aws_nat_gateway.nat
  vpc_id   = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = each.value.id
  }

  tags = { Name = "${var.name}-private-rt-${each.key}" }
}

resource "aws_route_table_association" "private_assoc" {
  for_each       = aws_subnet.private
  subnet_id      = each.value.id
  route_table_id = aws_route_table.private[each.key].id
}

resource "aws_ec2_client_vpn_endpoint" "cert" {
  description            = "${var.name}-client-vpn"
  server_certificate_arn = var.server_cert_arn
  client_cidr_block      = var.client_cidr_block
  vpc_id                 = aws_vpc.main.id
  split_tunnel           = true
  transport_protocol     = "udp"

  authentication_options {
    type                       = "certificate-authentication"
    root_certificate_chain_arn = var.server_cert_arn # can use the same cert as server when creating endpoint
  }

  connection_log_options {
    enabled = false
  }

  dns_servers = [cidrhost(var.vpc_cidr, 2),"1.1.1.1","8.8.8.8"]  # dynamic AmazonProvidedDNS, cloudflare, google
  #dns_servers = [cidrhost(var.vpc_cidr, 2)]  # dynamic AmazonProvidedDNS, cloudflare, google

  tags = {
    Name = "${var.name}-client-vpn"
  }
}

resource "aws_ec2_client_vpn_network_association" "private" {
  for_each               = aws_subnet.private
  client_vpn_endpoint_id = aws_ec2_client_vpn_endpoint.cert.id
  subnet_id              = each.value.id
}

resource "aws_ec2_client_vpn_authorization_rule" "allow_all" {
  for_each = aws_subnet.private

  client_vpn_endpoint_id = aws_ec2_client_vpn_endpoint.cert.id
  target_network_cidr    = each.value.cidr_block
  authorize_all_groups   = true
  description            = "Allow VPN clients access to ${each.key}"
}
